# JAX-CanVeg

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: CI.yml
data/: Forcing_US-Whs.csv
fixed_point/: case.py  forward.py  rev.py  rev_eqx.py
fixed_point/VegCan/: forward_eqx.py  rev_eqx.py  test1_forward.py  test1_fwd.py
fixed_point/modules/: fixed_point_all.py  timer.py
src/jax_canveg/: __init__.py  forcing.py
src/jax_canveg/physics/energy_fluxes/: DispersionMatrix.cpp
src/jax_canveg/shared_utilities/: plot.py
src/jax_canveg/shared_utilities/optim/: optim.py
src/jax_canveg/shared_utilities/solver/: __init__.py  eqx_fwd.py  eqx_rev.py  fixed_point.py  rev_eqx.py
src/jax_canveg/subjects/: Para.py  initialization_update.py  meterology.py  parameters.py
tests/: forcing.py  runtests.py  test-optim.py  test-run.py  test-runsteps.py  test_Met.py  test_Radiation.py  test_hybrid.py  test_modules.py  test_run.py  test_runsteps.py  test_update_state.py  train_testmodel.py  z1_pd.ipynb  z1_runsteps.ipynb
tests/Basic/: test_pd.py
tests/Hybrid-1L-0.0/: configs.json
tests/PB-1L-0.0/: configs.json
tests/PB-ML-0.0/: configs.json
tests/models/: train_dnns.py  train_testmodel.py
